feat: Authentication, User and UserToken  resources

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ APP_NAME=ESC-Guard
 APP_URL=http://${HOST}:${PORT}
 APP_PREFIX=/grd
 APP_LOCALE=pt
+APP_DESCRIPTION="Easy Contabil Authentication"
+APP_KEY=
 
 DB_CONNECTION=
 DB_HOST=127.0.0.1
