--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@nestjs-modules/mailer": "^1.6.0",
     "@nestjs/cli": "^7.0.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.5.0",
@@ -34,11 +35,12 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.7.13",
     "@nestjs/typeorm": "^7.1.5",
-    "@secjs/core": "^1.5.2",
+    "@secjs/core": "^1.5.3",
     "@secjs/env": "^1.0.5",
     "@types/node": "^13.9.1",
     "axios": "^0.21.0",
-    "bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cache-manager": "^3.4.1",
     "cache-manager-redis-store": "^2.0.0",
     "chalk": "^4.1.0",
@@ -71,6 +73,7 @@
     "@types/amqplib": "^0.5.17",
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cache-manager": "^3.4.0",
     "@types/chalk": "^2.2.0",
     "@types/debug": "^4.1.5",
