feat: Send emails and Authentication Guard

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.7.13",
     "@nestjs/typeorm": "^7.1.5",
-    "@secjs/core": "^1.5.3",
+    "@secjs/core": "^1.6.2",
     "@secjs/env": "^1.0.5",
     "@types/node": "^13.9.1",
     "axios": "^0.21.0",
@@ -52,11 +52,13 @@
     "dotenv": "^8.2.0",
     "express-rate-limit": "^5.2.6",
     "glob": "^7.1.6",
+    "handlebars": "^4.7.7",
     "helmet": "^4.4.1",
     "joi": "^17.4.0",
     "joiful": "^3.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "nodemailer": "^6.6.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -85,6 +87,7 @@
     "@types/joi": "^17.2.3",
     "@types/lodash": "^4.14.168",
     "@types/moment": "^2.13.0",
+    "@types/nodemailer": "^6.4.1",
     "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
