feat: Migration refresh Heroku Procfile

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "build": "nest build",
     "format": "prettier --write \"**/*.ts\" \"test/**/*.ts\"",
     "ts-node": "ts-node --transpile-only -r tsconfig-paths/register",
+    "migration:run": "yarn typeorm-mig migration:run",
+    "migration:revert": "yarn typeorm-mig migration:revert",
+    "migration:refresh": "yarn migration:revert && yarn migration:run",
     "typeorm-mig": "yarn ts-node ./node_modules/.bin/typeorm --config database/ormconfig.ts",
     "typeorm-seed": "yarn ts-node ./node_modules/typeorm-seeding/dist/cli.js -r database -n ormconfig.ts",
     "start": "nest start",
