--- a/.env.example
+++ b/.env.example
@@ -8,13 +8,19 @@ APP_URL=http://${HOST}:${PORT}
 APP_PREFIX=/grd
 APP_LOCALE=pt
 APP_DESCRIPTION="Easy Contabil Authentication"
-APP_KEY=
+APP_KEY=1dsa2asd3sds4dsada5fdd
 
-DB_CONNECTION=
+DB_CONNECTION=postgres
 DB_HOST=127.0.0.1
-DB_USERNAME=
-DB_PASSWORD=
-DB_DATABASE=
+DB_USERNAME=postgres
+DB_PASSWORD=docker
+DB_DATABASE=postgres
+
+SMTP_SSL=false
+SMTP_HOST='smtp.gmail.com'
+SMTP_PORT=587
+SMTP_DEFAULT_FROM='suporte@easycontabil.com.br'
 
 REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=
+REDIS_PORT=6379
+REDIS_PASSWORD=UHhoau8UcLKwHFV3f4EZUSN2KHTnA1Ck
