--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ DB_HOST=127.0.0.1
 DB_USERNAME=postgres
 DB_PASSWORD=docker
 DB_DATABASE=postgres
+DB_SYNCHRONIZE=true
 
 SMTP_SSL=false
 SMTP_HOST='smtp.gmail.com'
