--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,10 @@ name: CI Guard
 
 on: [pull_request]
 
+env:
+  DB_DATABASE: postgres
+  DB_PASSWORD: docker
+
 jobs:
   run_tests:
     runs-on: ubuntu-latest
@@ -10,13 +14,12 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_DATABASE: postgres
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: docker
+          POSTGRES_DATABASE: ${{ env.DB_DATABASE }}
+          POSTGRES_USER: ${{ env.DB_DATABASE }}
+          POSTGRES_PASSWORD: ${{ env.DB_PASSWORD }}
           POSTGRES_ROOT_PASSWORD: root1234
         ports:
           - '5433:5432'
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 10
 
     steps:
       - uses: actions/checkout@v2
