--- a/.env.example
+++ b/.env.example
@@ -15,11 +15,13 @@ DB_HOST=127.0.0.1
 DB_USERNAME=postgres
 DB_PASSWORD=docker
 DB_DATABASE=postgres
-DB_SYNCHRONIZE=true
+DB_SYNCHRONIZE=false
 
 SMTP_SSL=false
 SMTP_HOST='smtp.gmail.com'
 SMTP_PORT=587
+SMTP_USER=''
+SMTP_PASSWORD=''
 SMTP_DEFAULT_FROM='suporte@easycontabil.com.br'
 
 REDIS_HOST=127.0.0.1
