--- a/package.json
+++ b/package.json
@@ -74,9 +74,9 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "swagger-ui-express": "^4.1.6",
+    "ts-node": "^8.6.2",
     "typeorm-seeding": "^1.6.1",
-    "uuidv4": "^6.2.5",
-    "ts-node": "^8.6.2"
+    "uuidv4": "^6.2.5"
   },
   "devDependencies": {
     "@nestjs/schematics": "^7.0.0",
